--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "url": "https://github.com/ericf89/bowling.git"
   },
   "dependencies": {
-    "express": "^4.9.7"
+    "body-parser": "^1.9.0",
+    "express": "^4.9.7",
+    "mongoose": "^3.8.17"
   }
 }
