--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.9.0",
     "express": "^4.9.7",
+    "jasmine-node": "^1.14.5",
     "mongoose": "^3.8.17"
   }
 }
