--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.9.0",
     "express": "^4.9.7",
     "jasmine-node": "^1.14.5",
+    "mockgoose": "^1.10.7",
     "mongoose": "^3.8.17",
     "underscore": "^1.7.0"
   }
