--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/ericf89/bowling.git"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.9.0",
     "express": "^4.9.7",
     "jasmine-node": "^1.14.5",
